kubernetes/webolith-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: webolith
  labels:
    app: webolith
spec:
  selector:
    app: webolith
    component: django
  ports:
    - port: 8000
      name: django-port
  #     nodePort: 31344   # Force a specific port.
  # type: NodePort

---

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: webolith-deployment
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: webolith
        component: django
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: webolith-container
        # XXX: DON'T USE LATEST ON PROD.
        image: domino14/webolith:7
        readinessProbe:
          exec:
            command:
            - cat
            - /opt/webolith/djAerolith/test_requirements.txt
          successThreshold: 1
          failureThreshold: 2
          periodSeconds: 5
          initialDelaySeconds: 5
        lifecycle:
          preStop:
            exec:
              # A hack to try to get 0% downtime during deploys. This should 
              # help ensure k8s eventually stops giving this node traffic.
              command: ["sh", "-c", "rm /opt/webolith/djAerolith/test_requirements.txt && sleep 20"]

        volumeMounts:
        # This should be the same as the WORD_DB_LOCATION env var.
        - mountPath: /db
          name: word-db-data
        - mountPath: /opt/webolith_static
          name: webolith-static
      volumes:
      - name: word-db-data
        hostPath:
          # Change this path to the relevant db path.
          path: /Users/cesar/coding/webolith/db
      - name: webolith-static
        hostPath:
          path: /Users/cesar/coding/webolith/kubernetes/webolith_static
      restartPolicy: Always
