kubernetes/webolith-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webolith-ingress
spec:
  backend:
    # The default backend.
    serviceName: webolith
    servicePort: 8000
  tls:
  - hosts:
    - vm.aerolith.org
    secretName: tls-secret
  rules:
  - host: vm.aerolith.org
    http:
      paths:
      - path: /static
        backend:
          serviceName: nginx-static-svc
          servicePort: 80
      - path: /thisisadumbannoyinghack
        backend:
          serviceName: nginx-static-svc
          servicePort: 80
